--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       <div class="w-full flex-grow flex items-center justify-center z-0">
         {{ content }}
       </div>
-      <footer class="block bg-gray-800 text-gray-400 text-xs lg:text-sm text-center flex-shrink w-full py-3">
+      <footer class="block text-gray-400 text-xs lg:text-sm text-center flex-shrink w-full py-3">
         &copy; {{ "now" | date: "%Y" }} Bruno Grillo
         · Creado con <span class="text-rose-300">❤</span> y <a href="https://github.com/mzrnsh/jekyllwind" class="underline decoration-dotted">Jekyllwind</a>
         <span class="hidden md:inline"> · </span><br class="md:hidden">Powered by <a href="https://jekyllrb.com" class="underline decoration-dotted">Jekyll</a> 
